--- a/PatientApp/src/app/patient-dash/patient-dash.component.html
+++ b/PatientApp/src/app/patient-dash/patient-dash.component.html
@@ -21,22 +21,25 @@
 <table class="table mt-4">
     <thead>
         <tr>
-            <th scope="col">Id</th>
+            <th scope="col">patientId</th>
             <th scope="col">Name</th>
-            <th scope="col">mail</th>
-            <th scope="col">Adress</th>
-            <th scope="col"> problem</th>
-            <th scope="col">Doctor</th>
-            <th scope="col">Action</th>
+            <th scope="col">email</th>
+            <th scope="col">password</th>
+            <th scope="col">disease</th>
+            <th scope="col">age</th>
+            <th scope="col">gender</th>
+            <th scope="col">phnno</th>
         </tr>
     </thead>
     <tbody>
         <td>1</td>
         <td>lakshmi</td>
         <td>Lakshmi@gmail.com</td>
-        <td>nellore</td>
-        <td>Fever</td>
-        <td>ravi</td>
+        <td>mouni</td>
+        <td>cough</td>
+        <td>12</td>
+        <td>female</td>
+        <td>99999</td>
         <td>
             <button class="btn btn-info">Edit</button>&nbsp;
             <button class="btn btn-danger">Delete</button>
@@ -55,30 +58,45 @@
             <div class="modal-body">
                 <form [formGroup]="formValue">
                     <div class="mb-3">
-                        <label class="form-label"> Name </label>
+                        <label class="form-label">patient-id</label>
                         <input type="text" formControlName="Firstname" class="form-control"
                             placeholder="Patient First Name" id="exampleInputEmail1">
                     </div>
 
                     <div class="mb-3">
-                        <label class="form-label">Mail</label>
+                        <label class="form-label">Name</label>
                         <input type="text" formControlName="mail" class="form-control" placeholder="patient mail"
                             id="exampleInputPassword1">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Address</label>
-                        <input type="text" formControlName="Address" class="form-control" placeholder="patient Adress"
+                        <label class="form-label">email</label>
+                        <input type="text" formControlName="email" class="form-control" placeholder="patient Adress"
                             id="exampleInputPassword1">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">problem</label>
-                        <input type="text" formControlName="Patient problem" class="form-control"
-                            placeholder="patient problem" id="exampleInputPassword1">
+                        <label class="form-label">password</label>
+                        <input type="text" formControlName="Password" class="form-control" placeholder="patient problem"
+                            id="exampleInputPassword1">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Doctor</label>
-                        <input type="text" formControlName=" Doctor ng name" class="form-control"
-                            placeholder="Doctor Name" id="exampleInputPassword1">
+                        <label class="form-label">disease</label>
+                        <input type="text" formControlName="disease" class="form-control" placeholder="Doctor Name"
+                            id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">age</label>
+                        <input type="text" formControlName="age" class="form-control" placeholder="Doctor Name"
+                            id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">gender</label>
+                        <input type="text" formControlName="gender" class="form-control" placeholder="Doctor Name"
+                            id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">phnno</label>
+                        <input type="text" formControlName="phnno" class="form-control" placeholder="Doctor Name"
+                            id="exampleInputPassword1">
                     </div>
                 </form>
 
